--- a/src/Credfeto.DotNet.Code.Analysis.Overrides.Cmd/Credfeto.DotNet.Code.Analysis.Overrides.Cmd.csproj
+++ b/src/Credfeto.DotNet.Code.Analysis.Overrides.Cmd/Credfeto.DotNet.Code.Analysis.Overrides.Cmd.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <AnalysisLevel>latest</AnalysisLevel>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
@@ -68,7 +68,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Cocona" Version="2.2.0" />
-    <PackageReference Include="Credfeto.Date" Version="1.1.137.1283" />
     <PackageReference Include="Credfeto.Enumeration.Source.Generation.Attributes" Version="1.2.127.1366" />
     <PackageReference Include="FunFair.BuildVersion.Detection" Version="6.2.17.1375" />
     <PackageReference Include="Serilog.Enrichers.Demystifier" Version="1.0.3" />
