--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -38,6 +38,10 @@
    color: "96f7d2"
    description: "Changes in Credfeto.DotNet.Code.Analysis.Overrides.Cmd project"
 
+ - name: "credfeto-dotnet-code-analysis-overrides-tests"
+   color: "0e8a16"
+   description: "Changes in Credfeto.DotNet.Code.Analysis.Overrides.Tests project"
+
  - name: "dependencies"
    color: "0366d6"
    description: "Updates to dependencies"
